# python-vocaltractlab-pybind11

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  pyproject.toml  requirements.txt
src/: CMakeLists.txt
src/_core/: AnatomyParams.cpp  CMakeLists.txt  GeometricGlottis.cpp  Geometry.cpp  Glottis.cpp  GlottisFactory.cpp  Speaker.cpp  Surface.cpp  TriangularGlottis.cpp  Tube.cpp  TwoMassModel.cpp  VocalTract.cpp  __init__.cpp  util.h
src/vocaltractlab/: version.h
tests/: test_geometry.py  test_speaker.py
